refactor(版本管理):3.0.0迁移至2.0.0版本更新